@@ -1,3 +1,8 @@
+2007-01-07 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b48
+
+ * Change: Disable caching introduced by contribute patch in b46.
+	       The idea is nice, but the code was halfbaken.
+
 2007-01-06 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b47
 
  Fix: Empty line after ?> in AlbumDB.php
